# tortue

./: Cargo.toml  README.md  rustfmt.toml
.github/workflows/: rust.yml
tortue-bencode/: Cargo.toml
tortue-bencode/benches/: parser_bench.rs  writer_bench.rs
tortue-bencode/fuzz/: Cargo.toml
tortue-bencode/fuzz/fuzz_targets/: random_parse.rs  random_write.rs
tortue-bencode/src/: de.rs  error.rs  lib.rs  parser.rs  ser.rs  writer.rs
tortue-bencode/src/de/: map.rs  seq.rs
tortue-bencode/src/parser/: bytes.rs  dictionary.rs  int.rs  list.rs  string.rs
tortue-bencode/src/ser/: compound.rs
tortue-protocol/: Cargo.toml
tortue-reqbuilder/: Cargo.toml
tortue-reqbuilder/src/: lib.rs
tortue-reqtraits/: Cargo.toml
tortue-reqtraits/src/: lib.rs
tortue-structs/: Cargo.toml
tortue-structs/benches/: read_bench.rs  test_data
tortue-structs/src/: lib.rs  metainfo.rs  tracker.rs
