[package]
name = "tortue"
version = "0.1.0"
authors = ["Dherse <seb@dherse.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "tortue-bencode",
    "tortue-structs",
    "tortue-protocol"
]

[dependencies]