[package]
name = "tortue-reqbuilder"
version = "0.1.0"
authors = ["Dherse <sebastien.dherbais@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
tortue-reqtraits = { path = "../tortue-reqtraits" }
proc-macro2 = "1.0"
syn = "1.0"
quote = "1.0"