[package]
name = "tortue-structs"
version = "0.1.0"
authors = ["Dherse <sebastien.dherbais@gmail.com>"]
edition = "2018"

[dependencies]
tortue-bencode = { path = "../tortue-bencode" }

serde = { version = "1", features = [ "derive" ] }
serde_bytes = "0.11.5"

[dev-dependencies]
criterion = "0.3.3"

[[bench]]
path = "benches/read_bench.rs"
name = "read_bench"
harness = false